# lakeview

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  pyproject.toml
benches/: delta_parsing.rs
python/lakeview/: __init__.py
src/: lib.rs  main.rs
src/delta/: mod.rs
src/lakeview/: __init__.py  _core.pyi  dashboard.py  utils.py  viz.py
src/lakeview/assets/: style.css
src/lakeview/scripts/: generate_test_tables.py
tests/: integration_test.rs
