[project]
name = "lakeview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeff Brennan", email = "jeffbrennan10@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "dash>=2.18.0",
    "dash-bootstrap-components>=1.6.0",
    "pyarrow>=22.0.0",
    "pandas>=2.3.3",
]

[project.scripts]
lakeview = "lakeview:main"

[project.optional-dependencies]
dev = [
    "deltalake>=1.2.1",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
]

[tool.maturin]
module-name = "lakeview._core"
python-packages = ["lakeview"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
